@@ -48,19 +48,23 @@ namespace Gendarme.Rules.Performance {
 
 		public RuleResult CheckMethod (MethodDefinition method)
 		{
-			// #1 - rule doesn't apply to static ctor
+			// rule doesn't apply to static ctor (called by the runtime)
 			if (method.IsStatic && method.IsConstructor) 
 				return RuleResult.DoesNotApply;
 
-			// #2 - rule doesn't apply if the method is the assembly entry point or Main
+			// don't consider the compiler generated add / remove on events
+			if (((method.IsAddOn || method.IsRemoveOn) && (method.ImplAttributes & MethodImplAttributes.Synchronized) != 0))
+				return RuleResult.DoesNotApply;
+
+			// rule doesn't apply if the method is the assembly entry point or Main
 			if (method.IsEntryPoint () || method.IsMain ())
 				return RuleResult.DoesNotApply;
 
-			// #3 - rule doesn't apply if the method is generated by the compiler or by a tool
+			// rule doesn't apply if the method is generated by the compiler or by a tool
 			if (method.IsGeneratedCode ())
 				return RuleResult.DoesNotApply;
 
-			// #4 - does not apply if the method is used to register/unregister COM objects
+			// does not apply if the method is used to register/unregister COM objects
 			if (method.CustomAttributes.ContainsAnyType (ComRegistration))
 				return RuleResult.DoesNotApply;
 
