@@ -1,3 +1,8 @@
+2008-08-04  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* AvoidUncalledPrivateCodeRule.cs: Fix rule not to apply for
+	compiler generated add/remove methods on events.
+
 2008-07-26  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* AvoidUncalledPrivateCodeRule.cs: Don't ignore properties and
